@@ -283,6 +283,8 @@ Other Changes
 
 15. Upgraded to Lucene 2.9-dev r738218 (yonik)
 
+16. SOLR-959: Refactored TestReplicationHandler to remove hardcoded port numbers (hossman, Akshay Ukey via shalin)
+
 Build
 ----------------------
  1. SOLR-776: Added in ability to sign artifacts via Ant for releases (gsingers)
